fix z-index of showModalDialog.

--- a/src/showModalDialog.css
+++ b/src/showModalDialog.css
@@ -5,7 +5,7 @@
   position: fixed;
   right: 0;
   top: -100px;
-  z-index: 1040;
+  z-index: 1051;
 }
 
 .global-modal-dialog-root[aria-hidden="true"] {
@@ -21,7 +21,7 @@
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1050;
+  z-index: 1051;
 }
 
 .global-modal-dialog.popover .popover-content {
